--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 
 .nav li a{
     text-decoration: none;
-    color: white;
+    color: black;
     font-family: Arial;
     font-weight: bold;
     transition: 0.4s ease-in-out;
